# Onyx_Brain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Instructions.txt  README.md  ROADMAP.md  SECURITY.md  build.rs
capabilities/: default.json
docs/: advanced_autonomy.md  architecture.md  artifact_packs.md  artifacts.md  autonomy.md  brain_principles.md  capabilities.md  code_depth_audit.md  code_depth_report.md  commands.md  conversation.md  conversation_modes.md  creative_studio.md  debate_mode.md  executive_layer.md  gui.md  gui_functionality_audit.md  personality.md  release_v0.0.1.md  release_v0.0.2.md  release_v0.0.3.md  report_cards.md  safety_model.md  task_graph.md  v0.0.4_release.md  windows_app.md  work_contract.md  workflow_recipes.md
examples/: calculator_worker.md  documentation_pack.md  launch_kit.md  learning_pack.md  product_spec_pack.md  project_proposal.md  queue_run.md  release_kit.md  technical_report_pack.md
gui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
gui/scripts/: serve-dist.mjs  (+1 more)
src/: lib.rs  main.rs
tests/: test_activation.rs  test_brain.rs  test_consolidation.rs  test_energy.rs  test_gui_app_api.rs  test_learning.rs  test_memory.rs  test_routing.rs  test_storage.rs  test_tools.rs  test_v002_advanced_autonomy.rs  test_v002_autonomy.rs  test_v002_autonomy_plus.rs  test_v002_expansion.rs  test_v003_conversation.rs  test_v004_creative.rs  test_v004_executive.rs  test_v004_gui_executive.rs  test_v02.rs  test_v03.rs  test_v04.rs  test_v05.rs  test_v06.rs  test_v07.rs  test_v08.rs  test_v09.rs
(+203 files in other folders)
