[package]
name = "onyx_brain"
version = "0.0.4"
edition = "2021"
description = "A miniature disk-backed brain-inspired cognitive runtime"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]

[dev-dependencies]
tempfile = "3"
